fix some missing slash symbol

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <td width="20%" class="text-center font-bold text-xl text-maroon" id="pv-chk-handover"></td>
                         </tr>
                         <tr>
-                            <td class="text-[9pt] font-bold">PASSWORD FOR PC/LAPTOP (LOGIN DETAILS)</td>
+                            <td class="text-[9pt] font-bold">PASSWORD FOR PC / LAPTOP (LOGIN DETAILS)</td>
                             <td class="text-center font-bold text-xl text-maroon" id="pv-chk-password"></td>
                         </tr>
                         <tr>
@@ -266,7 +266,7 @@
                             <td class="text-center font-bold text-xl text-maroon" id="pv-chk-ticket"></td>
                         </tr>
                         <tr>
-                            <td class="text-[9pt] font-bold">FORMAT THE LAPTOP DESKTOP (FRESH NEW)</td>
+                            <td class="text-[9pt] font-bold">FORMAT THE LAPTOP / DESKTOP (FRESH NEW)</td>
                             <td class="text-center font-bold text-xl text-maroon" id="pv-chk-format"></td>
                         </tr>
                     </table>
@@ -391,14 +391,14 @@
 
             const procRows = [
                 ['HAND OVER (LAPTOP / DESKTOP)', getTick(document.getElementById('chk-handover').checked)],
-                ['PASSWORD FOR PC/LAPTOP (LOGIN DETAILS)', getTick(document.getElementById('chk-password').checked)],
+                ['PASSWORD FOR PC / LAPTOP (LOGIN DETAILS)', getTick(document.getElementById('chk-password').checked)],
                 ['BACK UP ALL THE NECESSARY DOCUMENT', getTick(document.getElementById('chk-docs').checked)],
                 ['BACK UP ALL THE IMPORTANT EMAIL ADDRESS', getTick(document.getElementById('chk-emails').checked)],
                 ['RESET EMAIL PASSWORD', getTick(document.getElementById('chk-reset').checked)],
                 ['SETUP AUTOMATIC REPLY FOR EMAIL', getTick(document.getElementById('chk-autoreply').checked)],
                 ['SETUP AUTO FORWARD EMAIL', getTick(document.getElementById('chk-autoforward').checked)],
                 ['DEACTIVATE USER FROM IT TICKETING SYSTEM', getTick(document.getElementById('chk-ticket').checked)],
-                ['FORMAT THE LAPTOP DESKTOP (FRESH NEW)', getTick(document.getElementById('chk-format').checked)]
+                ['FORMAT THE LAPTOP / DESKTOP (FRESH NEW)', getTick(document.getElementById('chk-format').checked)]
             ];
 
             doc.autoTable({
